# Trident-G-Trading

./: .gitignore  .pre-commit-config.yaml  Blueprint for a Scale-Free Trident G-Loop Trading Algorithm (2).docx  MRQ Diverse Portfolio Trading Stategy.docx  MVP - Trident Trader Code (1).docx  Project Management.docx  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly_smoke.yml
configs/: dev.toml  lambda_gate.toml  live.toml  news_gdelt.toml  paper.toml  timescales.toml
configs/universes/: four_streams.toml  futures_core.toml  fx_major.toml
configs/venues/: cme.toml  ibkr.toml
data/: README.md
docs/: 00_vision.md  10_trident_mapping.md  20_g_loop_playbook.md  30_operator_spec.md  40_evidence_rules.md
docs/90_runbooks/: broker_failover.md  incident_kill_switch.md
operators_bank/: README.md
operators_bank/operators/: O001_mean_reversion.yaml  O002_breakout.yaml
scripts/: bootstrap_duckdb.py  export_gdelt_intensity.py  import_historical.py  run_backtest.py  run_paper.py  run_walkforward.py
src/trident_trader/: cli.py
tests/fixtures/: README.md
tests/integration/: test_backtest_csv_ingestion.py  test_cli.py  test_news_intensity_gate.py
tests/unit/: test_backtest_engine.py  test_backtest_metrics.py  test_consolidators.py  test_entropy_mi_controller.py  test_lambda_gate.py  test_lambda_world.py  test_mutual_info.py  test_operator_selector_entropy_mi.py  test_portfolio_book.py  test_relational_graph.py  test_risk_limits.py  test_rolling_state.py  test_sim_fill.py  test_smoke.py  test_successor_map.py  test_type2_gate.py  test_walkforward.py
(+47 files in other folders)
