[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "trident-trader"
version = "0.1.0"
description = "Trident-G aligned trading research and execution scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Trident" }]
dependencies = [
  "pydantic>=2.8",
  "typer>=0.12",
  "rich>=13.7",
  "duckdb>=1.0",
  "pandas>=2.2",
  "pyarrow>=16.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
]

[project.scripts]
trident-trader = "trident_trader.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
packages = ["trident_trader"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
